--- a/python_1.ipynb
+++ b/python_1.ipynb
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "51dc2236",
+   "id": "e54e9268",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e8fb1103",
+   "id": "4b2fba88",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5d5040ca",
+   "id": "6aa80638",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "906700c5",
+   "id": "6199d110",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3cfab180",
+   "id": "7a9ba49f",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "992b88b1",
+   "id": "ab1546f4",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "52efcfa6",
+   "id": "3b3ed04a",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "847fcc06",
+   "id": "785e99fa",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "19072b59",
+   "id": "65f9846f",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "1e4e35ad",
+   "id": "a7d1f6c0",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "bd0c8f09",
+   "id": "8d96dc86",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b5a47169",
+   "id": "eff0447b",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "1c0b9381",
+   "id": "181bca56",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1e88492b",
+   "id": "0651c9cb",
    "metadata": {},
    "outputs": [
     {
@@ -517,6 +517,38 @@
     "    if i == 10:\n",
     "        print(z.index(i))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "5800c5da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "k =[5, 1, 5, 10, 11, 9, 5, 1]\n",
+    "\n",
+    "index_vals = []\n",
+    "for i, b in enumerate(k):\n",
+    "    if b == 5:\n",
+    "        index_vals.append(i)\n",
+    "print(index_vals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34e7e0e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
